# pr-desktop-tools

./: CMakeLists.txt  Ueberlegung.ts  bla.json  combine_mk_and_run.sh  dataIO2_testOutput.txt  generate_action.sh  mk.sh  run.sh  testInput.txt  testOutput.ts  testOutput.txt
scripts/: gen.sh  sourceMe.sh
src/: Activity.H  Activity.cxx  ActivityButton.H  ActivityButton.cxx  BaseAction.H  BaseAction.cxx  BlaBlubb.H  BlaBlubb.cxx  Button.H  Button.cxx  Callback.H  CountDown.H  CountDown.cxx  DbgButton.H  ExampleAction.H  ExampleAction.cxx  GenActionCodeAction.H  GenActionCodeAction.cxx  Macros.H  OnFinish.H  PointerCoordOutput.H  Robot.H  Robot.cxx  SActivity.H  SActivity.cxx  SButtonAccess.H  SButtonAccess.cxx  SGenericAccess.H  SimpleScreenShotAction.H  SleepActivity.H  SleepActivity.cxx  SmartAction.H  SmartAction.cxx  Stocks.H  Stocks.cxx  StocksAction.H  StocksAction.cxx  StocksActivity.H  StocksActivity.cxx  TestAction.H  (+14 more)
src/dataIO-codegen/: Indent.H  Indent.cxx  TODO.md  TestInitializer.H  TestInitializer.cxx  Type.H  Type.cxx  codeGen.cxx  codeGenOld.cxx  codeGen_von_KI_2025-12-30.cxx  test.cxx  testExampleType.cxx  utils.H  utils.cxx
src/dataIO2/: Parser.H  TODO.md  TypeDecl.H  TypeDecl.cxx  main.cxx  templates.H  templates.cxx
src/dataIO3/: AnyTSType.H  AnyTSType.cxx  AnyTSType_Impl.H  Array.H  Array.cxx  Attribute.H  Attribute.cxx  AttributeList.H  AttributeList.cxx  Literal.H  Literal.cxx  Name.H  Parser.H  Reference.H  Reference.cxx  TSTypeBase.H  TSTypeVariants.H  Union.H  Union.cxx  macros.H  main.cxx  utils.H  utils.cxx
src/dataIO4/: Decl.H  Decl.cxx  DeclCol.cxx  Substitution.H  TODO.md  TSArray.cxx  TSAttribute.cxx  TSLiteral.H  TSLiteral.cxx  TSNull.cxx  TSReference.H  TSReference.cxx  TypeExp.H  TypeExp.cxx  main.cxx  maps.H  maps.cxx  parse.H
src/dataIO4/logics/: Exp.H  Exp.cxx  Func.H  FuncExp.H  FuncExp.cxx  TODO.md  VarExp.H  VarExp.cxx  forwards.H  test.H  test.cxx  unification.H  unification.cxx
src/dataIO4/utils/: SRange.H  StackTraceException.H  ordering.H  utils.H
src/dataIO5/: DeclCol.H  Substitution.cxx  TSArray.H  TSAttribute.H  TSAttributeList.H  TSAttributeList.cxx  TSNull.H  TSUndefined.H  TSUndefined.cxx  TSUnion.H  TSUnion.cxx  format.H  main.cxx  parse.cxx
src/dataIO5/logics/: Exp.H  Func.cxx  FuncExp.H  FuncExp.cxx  README.md  TODO.md  VarExp.H  VarExp.cxx  test.cxx  unification.H  unification.cxx
src/dataIO5/utils/: Output.H  Output.cxx  SRange.cxx  StackTraceException.cxx  utils.cxx
src/polymorphic-templates/: AnyObject.H  CMakeLists.txt  FloatObject.H  FloatObject.cxx  IntObject.H  IntObject.cxx  ObjectVariants.H  macros.H  polymorphic-templates.H  polymorphic-templates.cxx  test-main.cxx
src/pr-newsletter/: IncVersions.H  IncVersions.cxx  TODO.md  incVersions.H  incVersions.cxx  main_incVersionsBuildAllStart.cxx
src/pr-push-me/: main_pr-push-me.cxx
src/test/: static-cast.cxx
templates/: Action_H.txt  Action_cxx.txt
